Speech add whole

--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -19,4 +19,7 @@
     <script type="text/javascript" src='/js/layout.js'></script>
 
 
+    <script src="/components/annyang/dist/annyang.min.js"></script>
+
+    <script type="text/javascript" src="/js/whole-say.js"></script>
     
