--- a/views/spotify.ejs
+++ b/views/spotify.ejs
@@ -5,7 +5,7 @@
       <div class="container">
         <div id="login">
           <h1>Votre compte spotify</h1>
-          <a href="/spotify/login" class="btn btn-primary">Log in with Spotify</a>
+          <a href="/spotify/login" data-content="connexion Spotify" class="btn btn-primary">Connexion Spotify</a>
         </div>
         <div id="loggedin">
           <div id="user-profile">
