--- a/views/playlistSpotify.ejs
+++ b/views/playlistSpotify.ejs
@@ -29,7 +29,7 @@
                                         <tbody>
                                             <% playlists.forEach(function(info) { %>
                                                 <tr id="playlist<%= info.id %>" class="odd gradeX">
-                                                    <td>
+                                                    <td data-content="titre playlist">
                                                         <%= info.name %>
                                                     </td>
                                                     <td>
