--- a/views/showTrajet.ejs
+++ b/views/showTrajet.ejs
@@ -3,7 +3,7 @@
     <div id="page-wrapper">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">
+                <h1 class="page-header" data-content="titre trajet">
                     <%= info.start %><br />
                     <%= info.end %>
                 </h1>
@@ -90,6 +90,7 @@
 </div>
 <script>
 
+
 function initMap() {
     var directionsService = new google.maps.DirectionsService;
     var directionsDisplay = new google.maps.DirectionsRenderer;
@@ -98,8 +99,6 @@ function initMap() {
       center: {lat: 46.52863469527167, lng: 2.43896484375 },
     });
     directionsDisplay.setMap(map);
-
-
     directionsService.route({
         origin: "<%= info.start %>",
         destination: "<%= info.end %>",
@@ -112,12 +111,11 @@ function initMap() {
         }
     });
 }
-
 function calculateOriginForSearchAndDisplay(directionsService, directionsDisplay) {
-
-
-
+    
 }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap&libraries=places" async defer></script>
 
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap&libraries=places" async defer></script>
