--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -20,6 +20,6 @@
 
 
     <script src="/components/annyang/dist/annyang.min.js"></script>
-
+    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+    <script type="text/javascript" src="/js/textToSpeech.js"></script>
     <script type="text/javascript" src="/js/whole-say.js"></script>
-    
