--- a/app/src/css/stylePageDashboardAccueil.css
+++ b/app/src/css/stylePageDashboardAccueil.css
@@ -22,6 +22,9 @@ body {
   width: 80px;
   margin: auto;
 }
+.pull-right .fa:before {
+  width: auto;
+}
 .info-badge {
   padding-top: 40px;
   color:#484848;
