--- a/app/src/css/stylePageLayout.css
+++ b/app/src/css/stylePageLayout.css
@@ -1,4 +1,10 @@
 
+body {
+    background-image: url("../images/Weather-Wallpaper-15.jpg");
+    background-size: cover;
+}
+
+
 .avatar{
         background:rgba(0,0,0,0.1);
         padding:2em 0.5em;
@@ -77,7 +83,8 @@ body.open #menu {
 /* MAIN PAGE */
 .page-wrap {
    
-    padding: 50px;
+    padding: 10px;
+    padding-top: 15vh;
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
@@ -86,7 +93,7 @@ body.open #menu {
        -moz-transition: all .3s ease-in;
          -o-transition: all .3s ease-in;
             transition: all .3s ease-in;
-    background-image: linear-gradient(142deg, #FEE140 0%, #ff4f52 100%);
+
 
 }
 body.open .page-wrap {
@@ -124,8 +131,8 @@ body.open button#menu-toggle:after {
     text-align: center;
     z-index: 999999;
     font-weight: bold;
-    -webkit-animation: anim linear forwards 1s;
-    animation: anim linear forwards 1s;
+    background-color: rgba(90, 90, 90, 0.85)!important;
+    text-transform: uppercase;
 }
 
 .list-group-item {
@@ -153,10 +160,15 @@ body.open button#menu-toggle:after {
 
 .menu-toggle-tend {
     display: block;
-    width: auto; 
-    background: red;
+    width: auto;
+    background: rgba(255, 0, 0, 0);
     position: fixed;
+    border: 0;
     z-index: 9999999;
+    padding: 2% 2% 2% 0;
+    padding-top: 4vh;
 }
+
+
 
 
