--- a/app/src/sass/test.scss
+++ b/app/src/sass/test.scss
@@ -71,13 +71,13 @@ transition: .3s;
 
 
 /* Demo Container */
-body {
+body { 
   margin: 0;
   padding: 0;
-  background: #56CCF2; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #56CCF2 , #2F80ED); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #56CCF2 , #2F80ED); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: url("../images/Weather-Wallpaper-15.jpg");
+  background-size: cover;
 }
+
 .container-demo { 
   width: 960px;
   margin: 0 auto;
@@ -114,12 +114,17 @@ body {
   
   .burger-line {
     width: 100%;
-    height: 10px;
-    border-radius: 5px;
+    height: 5px;
+    border-radius: 4px;
     background-color: #ecf0f1;
     margin: 0 auto;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     transition: all 0.2s ease-in-out;
+    -moz-box-shadow: 0px 10px 20px rgba(101, 101, 101, 0.22);
+-webkit-box-shadow: 0px 10px 20px rgba(101, 101, 101, 0.22);
+-o-box-shadow: 0px 10px 20px 0px rgba(101, 101, 101, 0.22);
+box-shadow: 0px 10px 20px 0px rgba(101, 101, 101, 0.22);
+filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(101, 101, 101, 0.22), Direction=180, Strength=20);
     
     &:last-child {
       margin-bottom: 0;
@@ -137,7 +142,7 @@ body {
   }
   &.cross {
     .burger-line:nth-child(3) {
-      margin-top: -20px;
+      margin-top: -11px;
     }
     &.open-nav > .burger-line {
       &:nth-child(1),
@@ -248,6 +253,121 @@ body {
       }
     }
   }
+}
+
+
+@mixin va ($pos: relative, $top: 50%) {
+    position: $pos;
+    top: $top;
+    transform: translateY(-50%);
+}
+
+
+  .list-group {
+    padding-left: 0;
+    padding-top: 22vh;
+    line-height: 10vh;
+    margin-bottom: 20px;
+    /* color: #545454; */
+    font-size: 2em;
+    font-weight: 500;
+  }
+
+  .list-group li {
+    transform: translate3d(0, 0, 0);
+  }
+
+
+  .list-group a {
+    text-decoration: none;
+    color: #8c8c8c;
+    font-weight: 700;
+    -webkit-transition: all .3s ease-in;
+       -moz-transition: all .3s ease-in;
+         -o-transition: all .3s ease-in;
+            transition: all .3s ease-in;
+      display: block;
+      padding: 0 40px;
+      height: 60px;
+      line-height: 60px;
+  }
+
+  .list-group a:after {
+    position: absolute;
+    left: 50%;
+    right: 50%;
+    top: 100%;
+    height: 3px;
+    z-index: -1;
+    bottom: 25px;
+    max-width: 21%;
+    margin: auto;
+    content: "";
+    background-color: #a1ff83;
+    transition: 1s cubic-bezier(0.20, -0.20, 0.2, 1.5);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    transform: rotate(-1deg);
+  }
+
+    .list-group a:hover:after {
+      left: 40px;
+      right: 42px;
+    }
+
+  .list-group a:hover, .list-group a:focus{
+    text-decoration: none;
+    color: #ffffff;
+    z-index: 500000;
+    font-weight: bold;
+  }
+
+
+.button {
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 20px;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  background: rgba(255, 255, 255, 0.77);
+  -webkit-transition: .3s;
+  transition: .3s;
+  color: #5a5a5a;
+}
+
+.button:hover {
+    cursor: pointer;
+    color: #95f384;
+    background: rgba(255, 255, 255, 0.97);
+}
+
+.button:hover:after {
+    width: 129%;
+    border-radius: 25px;
+}
+
+.button:after {
+    position: absolute;
+    transition: .3s;
+    content: '';
+    width: 20%;
+    bottom: -58px;
+    left: -55px;
+    background: #95f384;
+    height: 100%;
+    -webkit-transform: skewX(15deg);
+    transform: skewX(15deg);
+    z-index: 0;
+    border-radius: -14px;
+    -webkit-transform: rotate(-1deg);
+    transform: rotate(0deg);
+}
+
+.panel {
+    border:none!important;
 }
 
 
