--- a/views/dashboardAccueil.ejs
+++ b/views/dashboardAccueil.ejs
@@ -1,6 +1,5 @@
 
 <div class="page-wrap">
-        <div id="page-wrapper" class="container">
             <!-- /.row -->
             <div class="row">
                 <div class="col-lg-3 col-md-6">
@@ -17,7 +16,7 @@
                             </div>
                         </div>
                         <a href="#">
-                            <div class="panel-footer">
+                            <div class="button">
                                 <span class="pull-left">Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
@@ -40,7 +39,7 @@
                             </div>
                         </div>
                         <a href="#">
-                            <div class="panel-footer">
+                            <div class="button">
                                 <span class="pull-left">Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
@@ -62,7 +61,7 @@
                             </div>
                         </div>
                         <a href="#">
-                            <div class="panel-footer">
+                            <div class="button">
                                 <span class="pull-left">Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
@@ -84,7 +83,7 @@
                             </div>
                         </div>
                         <a href="#">
-                            <div class="panel-footer">
+                            <div class="button">
                                 <span class="pull-left">Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
@@ -106,7 +105,7 @@
                             </div>
                         </div>
                         <a href="#">
-                            <div class="panel-footer">
+                            <div class="button">
                                 <span class="pull-left">Details</span>
                                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                                 <div class="clearfix"></div>
@@ -115,7 +114,6 @@
                     </div>
                 </div>
 
-            </div>
             <!-- /.row -->
     </div>
 
