--- a/views/trajets.ejs
+++ b/views/trajets.ejs
@@ -1,53 +1,45 @@
-<div class="page-wrap">
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">VOS TRAJETS</h1>
                     <a href="/trajet/creation/">Création</a>
 
-            </div>
+                </div>
             <!-- /.col-lg-12 -->
-        </div>
+            </div>
 
 
         <!--<%= JSON.stringify(trajets) %>-->
-        <div id="page-wrapper">
             <!-- /.row -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Listes de vos trajets
-                        </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
-                                    <tr>
-                                        <th>Point de départ</th>
-                                        <th>Point d'arrivé</th>
-                                        <th>Paramètres</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
+                                    <div class="row">
+                                        <div class="col-xs-4">Départ</div>
+                                        <div class="col-xs-4">Arrivé</div>
+                                        <div class="col-xs-4">Paramètres</div>
+                                    </div>
                                     <% trajets.forEach(function(info) { %>
-                                        <tr class="odd gradeX">
-                                            <td>
+                                        <div class="row">
+                                            <div class="col-xs-4">
                                                 <%= info.start %>
-                                            </td>
-                                            <td>
+                                            </div>
+                                            <div class="col-xs-4">
                                                 <%= info.end %>
-                                            </td>
-                                            <td class="center">
-                                                <a href="/trajet/show/<%= info.id %>" class="btn btn-primary">Voir</a>
-                                                <form action="/trajet/delete" method="POST">
+                                            </div>
+                                            <div class="col-xs-4">
+                                                <a href="/trajet/show/<%= info.id %>" class="btn btn-primary"> L </a>
+                                                <form action="/trajet/delete" method="POST" style="display:inline-block;" ;>
                                                     <input type="hidden" name="idvoyage" id="idvoyage" value="<%= info.id %>">
-                                                    <button type="submit" class="btn btn-danger">Supprimer</button>
+                                                    <button type="submit" class="btn btn-danger"> X </button>
                                                 </form>
-                                            </td>
+                                            </div>
                                         </tr>
                                         <% }); %>
-                                </tbody>
+
                             </table>
                         </div>
 
@@ -56,7 +48,4 @@
                 </div>
             </div>
 
-
         </div>
-    </div>
-</div>
