--- a/views/trajets.ejs
+++ b/views/trajets.ejs
@@ -19,22 +19,27 @@
 
                            <!--  <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">-->
                                     <div class="row">
-                                        <div class="col-xs-4">Départ</div>
-                                        <div class="col-xs-4">Arrivé</div>
-                                        <div class="col-xs-4">Paramètres</div>
+                                        <div class="col-xs-3">Numéro</div>
+                                        <div class="col-xs-3">Départ</div>
+                                        <div class="col-xs-3">Arrivé</div>
+                                        <div class="col-xs-3">Paramètres</div>
                                     </div>
                                     <% trajets.forEach(function(info) { %>
                                         <div class="row">
-                                            <div class="col-xs-4">
+                                            <div class="col-xs-3" data-content="lire trajet">
+
+                                                Trajet numéro  <%= info.id %>
+                                            </div>
+                                            <div class="col-xs-3" data-content="lire trajet">
 
                                                 <%= info.start %>
                                             </div>
-                                            <div class="col-xs-4">
+                                            <div class="col-xs-3" data-content="lire trajet">
                                                 <%= info.end %>
 
                                             </div>
-                                            <div class="col-xs-4">
-                                                <a href="/trajet/show/<%= info.id %>" class="btn btn-primary"><i class="fa fa-eye" aria-hidden="true"></i></a>
+                                            <div class="col-xs-3">
+                                                <a href="/trajet/show/<%= info.id %>" class="btn btn-primary" data-content="voir <%= info.id %>"><i class="fa fa-eye" aria-hidden="true"></i></a>
                                                 <form action="/trajet/delete" method="POST" style="display:inline-block;" ;>
 
                                                     <input type="hidden" name="idvoyage" id="idvoyage" value="<%= info.id %>">
@@ -42,7 +47,7 @@
 
                                                 </form>
                                             </div>
-                                        </tr>
+                                        </div>
                                         <% }); %>
 
                              <!--   </table>-->
